default/objects/success__Team__c/success__Team__c.object-meta.xml
<CustomObject>
    <description>A collection of Individuals (Members), Behaviours and Levels grouped together to form a Competition, Experience Group or Template (of either Members, Behaviours or Levels).</description>
    <label>Collective</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>