default/objects/success__Team__c/fields/success__ChatterGroupId__c.field-meta.xml
<CustomField>
    <fullName>success__ChatterGroupId__c</fullName>
    <label>Chatter Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>