default/objects/success__Team__c/fields/success__Competitors__c.field-meta.xml
<CustomField>
    <fullName>success__Competitors__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DEPRECATE - Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>