default/objects/success__Team__c/fields/success__Description__c.field-meta.xml
<CustomField>
    <fullName>success__Description__c</fullName>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>