default/objects/success__Team__c/fields/success__End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>success__End_Date_Time__c</fullName>
    <inlineHelpText>The date and time that the competition will end, unless a winning score is specified (which has the ability to end the competition early)</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>