default/objects/success__Team__c/fields/success__End_Notification_Body__c.field-meta.xml
<CustomField>
    <fullName>success__End_Notification_Body__c</fullName>
    <label>End Notification Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>