default/objects/success__Team__c/fields/success__End_Notification_Subject__c.field-meta.xml
<CustomField>
    <fullName>success__End_Notification_Subject__c</fullName>
    <label>End Notification Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>