default/objects/success__Team__c/fields/success__Insight_Only__c.field-meta.xml
<CustomField>
    <fullName>success__Insight_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insight &amp; Predict</label>
    <type>Checkbox</type>
</CustomField>