default/objects/success__Team__c/fields/success__Level_Field__c.field-meta.xml
<CustomField>
    <fullName>success__Level_Field__c</fullName>
    <label>Level Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>