default/objects/success__Team__c/fields/success__Levels__c.field-meta.xml
<CustomField>
    <fullName>success__Levels__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Levels</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>