default/objects/success__Team__c/fields/success__Notify_before_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>success__Notify_before_End_Date_Time__c</fullName>
    <formula>success__End_Date_Time__c -  success__Notify_days_before_end__c</formula>
    <inlineHelpText>The date / time that the end of competition announcement will be sent</inlineHelpText>
    <label>End Notification Date / Time</label>
    <type>DateTime</type>
</CustomField>