default/objects/success__Team__c/fields/success__Notify_before_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>success__Notify_before_Start_Date_Time__c</fullName>
    <formula>success__Start_Date_Time__c -  success__Notify_days_before_start__c</formula>
    <inlineHelpText>The date / time that the start of competition announcement will be sent</inlineHelpText>
    <label>Start Notification Date / Time</label>
    <type>DateTime</type>
</CustomField>