default/objects/success__Team__c/fields/success__Notify_by_Chatter__c.field-meta.xml
<CustomField>
    <fullName>success__Notify_by_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Notification messages will be sent via Chatter. Link an existing Group or create a new one if this option is selected</inlineHelpText>
    <label>Chatter Notification</label>
    <type>Checkbox</type>
</CustomField>