default/objects/success__Team__c/fields/success__Notify_By_Email__c.field-meta.xml
<CustomField>
    <fullName>success__Notify_By_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Notification messages will be sent via Email</inlineHelpText>
    <label>Email Notification</label>
    <type>Checkbox</type>
</CustomField>