default/objects/success__Team__c/fields/success__Notify_days_before_start__c.field-meta.xml
<CustomField>
    <fullName>success__Notify_days_before_start__c</fullName>
    <label>Notify days before start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>