default/objects/success__Team__c/fields/success__Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>success__Start_Date_Time__c</fullName>
    <inlineHelpText>The date and time that the competition will start</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>