default/objects/success__Team__c/fields/success__Start_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>success__Start_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Notification Sent</label>
    <type>Checkbox</type>
</CustomField>