default/objects/success__Team__c/fields/success__Start_Notification_Subject__c.field-meta.xml
<CustomField>
    <fullName>success__Start_Notification_Subject__c</fullName>
    <label>Start Notification Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>