default/objects/success__Team__c/fields/success__State__c.field-meta.xml
<CustomField>
    <fullName>success__State__c</fullName>
    <formula>IF( ISBLANK( success__Start_Date_Time__c),0,
  IF( success__Start_Date_Time__c &gt; NOW(),1,
    IF( AND(success__Start_Date_Time__c &lt; NOW(), OR(success__End_Date_Time__c &gt; NOW(), ISBLANK(success__End_Date_Time__c))),2,
      IF(success__End_Date_Time__c &lt; NOW(), 3, 4)
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>