default/objects/success__Team__c/fields/success__State_Label__c.field-meta.xml
<CustomField>
    <fullName>success__State_Label__c</fullName>
    <formula>CASE( success__State__c,
0, $Label.success__available,
1, &quot;Scheduled&quot;,
2, &quot;Running&quot;,
3, CASE(TEXT(success__Status__c), &quot;Declared&quot;, $Label.success__declared, &quot;Archived&quot;, $Label.success__archived, $Label.success__finished ) ,
&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Text</label>
    <type>Text</type>
</CustomField>