default/objects/success__Team__c/fields/success__Template_Type__c.field-meta.xml
<CustomField>
    <fullName>success__Template_Type__c</fullName>
    <label>Template Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>