default/objects/success__Team__c/fields/success__Visibility__c.field-meta.xml
<CustomField>
    <fullName>success__Visibility__c</fullName>
    <inlineHelpText>Set to Visible or Hidden to control whether Members see the Leaderboard or Behavioural Nudges</inlineHelpText>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visible</fullName>
                <default>true</default>
                <label>Visible</label>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>