default/objects/success__Team__c/fields/success__Win_Condition__c.field-meta.xml
<CustomField>
    <fullName>success__Win_Condition__c</fullName>
    <formula>IF(ISBLANK( success__End_Date_Time__c ),

IF(ISBLANK(  success__Winning_Score__c  ), $Label.success__competition_win_string_5,

$Label.success__competition_win_string_1 &amp; &quot; &quot; &amp; $Label.success__competition_win_string_3 &amp; &quot; &quot; &amp; TEXT( success__Winning_Score__c )),


IF(ISBLANK(  success__Winning_Score__c  ), $Label.success__competition_win_string_1 &amp; &quot; &quot; &amp; $Label.success__competition_win_string_2,


$Label.success__competition_win_string_1 &amp; &quot; &quot; &amp; $Label.success__competition_win_string_3 &amp; &quot; &quot; &amp; TEXT( success__Winning_Score__c ) &amp; $Label.success__competition_win_string_4 &amp; &quot; &quot; &amp; $Label.success__competition_win_string_2

)

)</formula>
    <label>Win Condition</label>
    <type>Text</type>
</CustomField>