default/objects/success__Team__c/fields/success__Winning_Score__c.field-meta.xml
<CustomField>
    <fullName>success__Winning_Score__c</fullName>
    <inlineHelpText>Only required if the competition is to end when the first person achieves the specified score.</inlineHelpText>
    <label>Win Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>