default/objects/success__Team__c/recordTypes/success__Group.recordType-meta.xml
<RecordType>
    <fullName>success__Group</fullName>
    <active>true</active>
    <description>Intended to run continuously to build experience and promote mastery without direct comparison to colleagues. Drives personal growth and development.</description>
    <label>Experience Group</label>
</RecordType>