default/objects/success__Team__c/recordTypes/success__Objective.recordType-meta.xml
<RecordType>
    <fullName>success__Objective</fullName>
    <active>true</active>
    <description>DEPRECATED (no longer in use)</description>
    <label>Objective</label>
</RecordType>