default/objects/success__Team__c/recordTypes/success__Targeted.recordType-meta.xml
<RecordType>
    <fullName>success__Targeted</fullName>
    <active>true</active>
    <description>Intended to run for shorter periods of time to focus on targeted behaviours. Drives competition between participants via position rankings displayed on leaderboards.</description>
    <label>Competition</label>
</RecordType>