default/objects/success__Team__c/recordTypes/success__Template.recordType-meta.xml
<RecordType>
    <fullName>success__Template</fullName>
    <active>true</active>
    <description>Collects together groups of Behaviours, Members and Levels that can be reused across both Experience Groups and Competitions.</description>
    <label>Template</label>
</RecordType>