default/objects/success__Team__c/validationRules/success__Chatter_notification_requires_group.validationRule-meta.xml
<ValidationRule>
    <fullName>success__Chatter_notification_requires_group</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(success__Notify_by_Chatter__c == TRUE),
ISBLANK( success__ChatterGroupId__c)
)</errorConditionFormula>
    <errorMessage>An existing Chatter Group must be linked to this Competition (or a new Group created) when Chatter notifications are enabled</errorMessage>
</ValidationRule>