default/objects/success__Team__c/validationRules/success__Start_date_must_be_before_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>success__Start_date_must_be_before_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK(success__End_Date_Time__c)), NOT(ISBLANK( success__Start_Date_Time__c )),   success__End_Date_Time__c &lt;  success__Start_Date_Time__c )</errorConditionFormula>
    <errorMessage>The start date must be before the end date</errorMessage>
</ValidationRule>