default/objects/success__Team__c/listViews/success__All.listView-meta.xml
<ListView>
    <fullName>success__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>success__Visibility__c</columns>
    <columns>success__State_Label__c</columns>
    <columns>success__Competitors__c</columns>
    <columns>success__Achievements__c</columns>
    <columns>success__Levels__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>success__Team__c.success__Objective</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>