default/objects/success__Team__c/listViews/success__Competitions_for_info.listView-meta.xml
<ListView>
    <fullName>success__Competitions_for_info</fullName>
    <columns>NAME</columns>
    <columns>success__State_Label__c</columns>
    <columns>success__Start_Date_Time__c</columns>
    <columns>success__End_Date_Time__c</columns>
    <columns>success__Description__c</columns>
    <columns>success__Visibility__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>success__Team__c.success__Targeted</value>
    </filters>
    <label>Competitions</label>
    <language>en_US</language>
</ListView>