default/objects/success__Team__c/listViews/success__Experience_Groups.listView-meta.xml
<ListView>
    <fullName>success__Experience_Groups</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>success__State_Label__c</columns>
    <columns>success__Achievements__c</columns>
    <columns>success__Competitors__c</columns>
    <columns>success__Levels__c</columns>
    <columns>success__Description__c</columns>
    <columns>success__Visibility__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>success__Team__c.success__Group</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
    </filters>
    <label>Experience Groups</label>
    <language>en_US</language>
</ListView>