default/objects/success__Team__c/listViews/success__Templates.listView-meta.xml
<ListView>
    <fullName>success__Templates</fullName>
    <columns>NAME</columns>
    <columns>success__Template_Type__c</columns>
    <columns>success__Achievements__c</columns>
    <columns>success__Competitors__c</columns>
    <columns>success__Levels__c</columns>
    <columns>success__Description__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>success__Team__c.success__Template</value>
    </filters>
    <label>Templates</label>
    <language>en_US</language>
</ListView>